FIX: #12 Added bootstrap override for container class to fix mobile/tablet overflow issues

--- a/colourgrab/static/css/main.css
+++ b/colourgrab/static/css/main.css
@@ -10450,3 +10450,8 @@ p {
     display: none !important;
   }
 }
+.container {
+  width: calc(100% - 30px);
+  padding-left: 15px;
+  padding-right: 15px;
+}
